# ClimaLab

./: .gitignore  README.md  app_dataagg.py  app_explorer.py  mean_year.py  pyproject.toml  test.py
components/: explorador.py  explorer_server.py  panels.py  pv_calc_server.py  pv_calc_ui.py  sun_path_server.py  sun_path_ui.py  thermal_comfort_server.py  thermal_comfort_ui.py  wind_power_server.py
utils/: config.py  data_processing.py  graficadores__.py  plots.py  pv_calc.py  sun_path.py  thermal_comfort.py  validations.py  wind_rose.py
wind_simulation/: sam_wind.csv  wind-turbines.json
