[project]
name = "climalab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.3.1",
    "faicons>=0.2.2",
    "ipykernel>=6.29.5",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "pvlib>=0.13.0",
    "shiny>=1.4.0",
    "shinywidgets>=0.6.2",
]
