[project]
name = "climalab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.3.1",
    "faicons>=0.2.2",
    "fastparquet>=2024.11.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "missingno>=0.5.2",
    "nbformat>=5.10.4",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "plotly-resampler>=0.11.0rc1",
    "pvlib>=0.13.0",
    "pyarrow>=20.0.0",
    "pythermalcomfort>=3.3.0",
    "shiny>=1.4.0",
    "shinyswatch>=0.9.0",
    "shinywidgets>=0.6.2",
    "windrose>=1.9.2",
]
